<resources>
    <string name="app_name">Events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="featured_events_lbl">Featured Events</string>
    <string name="categories_lbl">Categories</string>
    <string name="see_all_lbl">SEE ALL</string>
    <string name="my_favorites_lbl">My Favorites</string>
    <string name="more_events_lbl">More Events</string>
    <string name="_8942">⋮</string>
    <string name="safaricom_prepaid_lbl">Safaricom Prepaid</string>
    <string name="account_lbl">Account</string>
    <string name="total_lbl">Total</string>
    <string name="pay_with_lbl">PAY WITH</string>
    <string name="card_lbl">CARD</string>
    <string name="m_pesa_lbl">M-PESA</string>
    <string name="continue_lbl">continue</string>
    <string name="add_new_card_lbl">Add new card</string>
    <string name="kes_5000_lbl">KES 5000</string>
    <string name="title_lbl">Tinga Tinga Tales The Musical 2018</string>
</resources>
